--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=planner
+spring.datasource.url=jdbc:mysql://localhost:3306/planner?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=javadeveloper
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.dll-auto=update
